=================================3=========================================
deleted interface from main.py from now.... focusing on functionality first
added games.ini to store game profiles, including save locations.
added changes to help me remember what I am changing.
=================================END========================================

=================================4==========================================
added backupall function to main.py (just for show for now) and also finished 
the logic for the fin function in main.py and added some handy comments, 
and made config.ini to store data about the ftp and the to be made database
added info in README.md to refer to from config.ini