@@ -10,4 +10,5 @@ user = saver
 password = saver
 dir = /
 
+
 [DATABASE]
