@@ -3,5 +3,7 @@
 #PLEASE DO NOT MESS WITH THIS if you do not know what you are doing!
 
 [MINECRAFT]
-path = %AppData%/Roaming/.minecraft/saves
-mods = %AppData%/Roaming/.minecraft/mods
+extpath = AppData\Roaming\.minecraft\saves
+
+[FALLOUT 3]
+extpath = OneDrive\Documents\My Games\Fallout3
